--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,16 +1,12 @@
 workflows:
-  # Simplified workflow specifically for AltStore distribution
+  # Simplified workflow specifically for AltStore distribution (no code signing)
   altstore-build:
-    name: NutriLens AltStore Build
+    name: NutriLens AltStore Build (Unsigned)
     instance_type: mac_mini_m1
     environment:
       node: latest
       xcode: latest
       cocoapods: default
-      vars:
-        BUNDLE_ID: "io.nutritlens.app"
-        XCODE_SCHEME: "App"
-        PRODUCT_NAME: "NutriLens"
     scripts:
       - name: Install npm dependencies
         script: |
@@ -30,80 +26,102 @@ workflows:
           npx cap add ios || true
           npx cap sync ios
       
-      - name: Set up code signing
+      - name: Install Codemagic CLI tools
         script: |
-          # Create a temporary keychain
-          KEYCHAIN_NAME="ios-build.keychain"
-          KEYCHAIN_PASSWORD="temporary"
-          security create-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_NAME"
-          security list-keychains -d user -s "$KEYCHAIN_NAME" $(security list-keychains -d user | sed s/\"//g)
-          security set-keychain-settings "$KEYCHAIN_NAME"
-          security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_NAME"
-          
-          # If you have a provisioning profile
-          if [ ! -z "$PROVISIONING_PROFILE" ]; then
-            echo $PROVISIONING_PROFILE | base64 --decode > /tmp/profile.mobileprovision
-            mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-            UUID=$(grep -a -A 1 "UUID" /tmp/profile.mobileprovision | grep -o "[-A-Z0-9]\{36\}")
-            cp /tmp/profile.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/"$UUID".mobileprovision
-            echo "Installed provisioning profile $UUID"
-          else
-            echo "No provisioning profile provided, using automatic signing"
-          fi
-          
-          # Update the Xcode project with the team ID
-          cd ios/App
-          echo "Setting team ID to: $XCODE_DEVELOPMENT_TEAM"
-          /usr/libexec/PlistBuddy -c "Set :CFBundleIdentifier $BUNDLE_ID" Info.plist
+          pip3 install codemagic-cli-tools
       
-      - name: Create exportOptions.plist for ad-hoc distribution
+      - name: Create unsigned IPA
         script: |
-          cat > ios/App/exportOptions.plist << EOL
+          # Navigate to the iOS project directory
+          cd ios/App
+          
+          # Create export options plist for development (no signing)
+          cat > exportOptions.plist << EOL
           <?xml version="1.0" encoding="UTF-8"?>
           <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
           <plist version="1.0">
           <dict>
             <key>method</key>
             <string>development</string>
-            <key>teamID</key>
-            <string>$XCODE_DEVELOPMENT_TEAM</string>
             <key>compileBitcode</key>
             <false/>
             <key>signingStyle</key>
-            <string>automatic</string>
+            <string>manual</string>
+            <key>stripSwiftSymbols</key>
+            <true/>
+            <key>thinning</key>
+            <string>&lt;none&gt;</string>
           </dict>
           </plist>
           EOL
+          
+          # Build the project without codesigning
+          xcode-project build-ipa \
+            --workspace App.xcworkspace \
+            --scheme App \
+            --config Debug \
+            --no-codesign \
+            --output-path $CM_BUILD_DIR/build/ios/App.ipa
+          
+          # Verify that the IPA was created
+          ls -la $CM_BUILD_DIR/build/ios/App.ipa || echo "IPA not created"
       
-      - name: Build and archive iOS app
+      # Fallback approach if xcode-project build-ipa doesn't work
+      - name: Fallback - Build Archive
         script: |
-          cd ios/App
-          echo "Building with team ID: $XCODE_DEVELOPMENT_TEAM"
-          # For detailed logs
-          set -x 
-          xcodebuild -workspace App.xcworkspace -scheme App -configuration Debug \
-            -archivePath $CM_BUILD_DIR/build/App.xcarchive archive \
-            -allowProvisioningUpdates \
-            CODE_SIGN_IDENTITY="Apple Development" \
-            DEVELOPMENT_TEAM=$XCODE_DEVELOPMENT_TEAM \
-            PROVISIONING_PROFILE_SPECIFIER="" \
-            CODE_SIGN_STYLE=Automatic \
-            PRODUCT_BUNDLE_IDENTIFIER="$BUNDLE_ID" 2>&1 | tee $CM_BUILD_DIR/xcodebuild_archive.log
-      
-      - name: Create IPA for AltStore
-        script: |
-          cd ios/App
-          if [ -d "$CM_BUILD_DIR/build/App.xcarchive" ]; then
-            xcodebuild -exportArchive \
+          if [ ! -f "$CM_BUILD_DIR/build/ios/App.ipa" ]; then
+            echo "Primary build failed, trying archive method..."
+            cd ios/App
+            xcodebuild \
+              -workspace App.xcworkspace \
+              -scheme App \
+              -configuration Debug \
+              -archivePath $CM_BUILD_DIR/build/App.xcarchive \
+              archive \
+              CODE_SIGN_IDENTITY="" \
+              CODE_SIGNING_REQUIRED=NO \
+              CODE_SIGNING_ALLOWED=NO
+            
+            # Export the archive as IPA
+            xcodebuild \
+              -exportArchive \
               -archivePath $CM_BUILD_DIR/build/App.xcarchive \
               -exportPath $CM_BUILD_DIR/build/ios \
-              -exportOptionsPlist exportOptions.plist 2>&1 | tee $CM_BUILD_DIR/xcodebuild_export.log
-          else
-            echo "Archive not found at $CM_BUILD_DIR/build/App.xcarchive"
-            echo "Build failed"
-            exit 1
+              -exportOptionsPlist exportOptions.plist || true
           fi
+      
+      # Second fallback using xcrun
+      - name: Fallback - Package with xcrun
+        script: |
+          if [ ! -f "$CM_BUILD_DIR/build/ios/App.ipa" ]; then
+            echo "Archive method failed, trying xcrun method..."
+            if [ -d "$CM_BUILD_DIR/build/App.xcarchive/Products/Applications/App.app" ]; then
+              mkdir -p $CM_BUILD_DIR/build/ios/Payload
+              cp -r $CM_BUILD_DIR/build/App.xcarchive/Products/Applications/App.app $CM_BUILD_DIR/build/ios/Payload/
+              cd $CM_BUILD_DIR/build/ios
+              zip -r App.ipa Payload
+              ls -la App.ipa
+            else
+              echo "No app found in archive to package"
+            fi
+          fi
+      
+      # Create info about the build for debugging
+      - name: Output build info
+        script: |
+          echo "=== Build Output Files ==="
+          find $CM_BUILD_DIR/build -type f -name "*.ipa" -o -name "*.app" | sort
+          
+          if [ -d "$CM_BUILD_DIR/build/App.xcarchive" ]; then
+            echo "=== Archive Info ==="
+            cat $CM_BUILD_DIR/build/App.xcarchive/Info.plist || echo "No Info.plist found"
+          fi
+          
+          echo "=== Final IPA Status ==="
+          ls -la $CM_BUILD_DIR/build/ios/App.ipa || echo "IPA not found in expected location"
     artifacts:
       - $CM_BUILD_DIR/build/ios/*.ipa
-      - $CM_BUILD_DIR/xcodebuild_*.log
+      - $CM_BUILD_DIR/build/ios/App.ipa
+      - $CM_BUILD_DIR/build/**/*.log
       - $CM_BUILD_DIR/build/App.xcarchive/Info.plist
+      - $CM_BUILD_DIR/build/ios/ExportOptions.plist
